<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondoscomidas"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:contentDescription="@string/img"
                app:srcCompat="@drawable/logocomidas" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="45dp"
                android:fontFamily="cursive"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="#8D3D5B"
                android:textSize="36sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="25dp"
                android:background="@drawable/bordes_redondos"
                android:onClick="NuevaComida"
                android:text="@string/b1"
                android:textColor="@drawable/texto_color"
                android:textSize="18sp" />

            <Button
                android:id="@+id/button2"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:background="@drawable/bordes_redondos"
                android:onClick="BuscarComida"
                android:text="@string/b2"
                android:textColor="@drawable/texto_color"
                android:textSize="18sp" />

            <Button
                android:id="@+id/button3"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:background="@drawable/bordes_redondos"
                android:onClick="CambiarComida"
                android:text="@string/b3"
                android:textColor="@drawable/texto_color"
                android:textSize="18sp" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>