<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondoscomidas"
    tools:context=".BuscarComida">

    <TextView
        android:id="@+id/tvBC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="serif-monospace"
        android:text="@string/b2"
        android:textColor="#8D3D5B"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/etBFechad"
        android:layout_width="55dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bordes_redondos"
        android:gravity="center"
        android:popupBackground="#FFEED3"
        app:layout_constraintBottom_toTopOf="@+id/tvComidas"
        app:layout_constraintEnd_toStartOf="@+id/etBFecham"
        app:layout_constraintTop_toBottomOf="@+id/tvBC" />

    <Spinner
        android:id="@+id/etBFecham"
        android:layout_width="55dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/bordes_redondos"
        android:gravity="center"
        android:popupBackground="#FFEED3"
        app:layout_constraintBottom_toTopOf="@+id/tvComidas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBC" />

    <Spinner
        android:id="@+id/etBFechaa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bordes_redondos"
        android:gravity="center"
        android:popupBackground="#FFEED3"
        app:layout_constraintBottom_toTopOf="@+id/tvComidas"
        app:layout_constraintStart_toEndOf="@+id/etBFecham"
        app:layout_constraintTop_toBottomOf="@+id/tvBC" />

    <TextView
        android:id="@+id/tvComidas"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="85dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bordes_redondos"
        android:gravity="center"
        android:text="@string/tvComidas"
        android:textColor="#8D3D5B"
        android:textSize="21sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBC" />

    <Button
        android:id="@+id/button6"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bordes_redondos"
        android:fontFamily="serif-monospace"
        android:onClick="Buscar"
        android:text="@string/b6"
        android:textColor="@drawable/texto_color"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvComidas" />
</androidx.constraintlayout.widget.ConstraintLayout>